# SynthTools

./: .gitignore  README.md  main_create_tasks.py  main_create_tools.py  main_dedup.py  main_evaluate_tools.py  main_multi_turn.py  pyproject.toml  requirements.txt  setup.sh
configs/: api_keys.json  deduplicate_tools_config.yml  evaluate_tools_config.yml  generate_tasks_config.yaml  generate_tool_config.yml  log_configs.json  multi_turn_config.yml
evaluation/: __init__.py  count.py
evaluation/acebench/: acebench_test.py  construct_tool_configs.py  meta_data_gen.py  meta_data_generating.yml
prompt_templates/: __init__.py  parameter_check.yml  tool_simulator_template.yml
prompt_templates/generate_acebench_tool_calls/: generate_successful_tool_calls.yml
prompt_templates/generate_environment_tasks_meta_data/: generate_environment_tasks_metadata_alternate_template.yml  generate_environment_tasks_metadata_template.yml  generate_environment_tasks_metadata_with_user_alternate_template.yml
prompt_templates/generate_metadata/: default_template.yml  generate_metadata_alternate_template.yml
scripts/: __init__.py  compute_embs.py  count.py  extract_tools.py  generate_metadata.py  generate_task_list.py  generate_task_metadata.py  generate_tool_from_field.py  judge_test.py  multi_turn_agent.py  multi_turn_human.py  run_deduplication.py  similarity_stats.py
simulator/: __init__.py  judge_simulator.py  simulate_tool.py
tool_content/: fields.txt  tool_list.json
tool_content/tool_emb/: Tool_call_1.npz  (+5955 more)
utils/: client_utils.py  misc_utils.py  test_judge_client_utils.py
(+7841 files in other folders)
